--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PencatatanPesanan
+application.vendor=FH6CLUE
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,17 @@ dist.jar=${dist.dir}/PencatatanPesanan.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PencatatanPesanan
+endorsed.classpath=
 excludes=
 file.reference.flatlaf-0.27.jar=lib\\flatlaf-0.27.jar
 file.reference.mysql-connector-java-8.0.24.jar=lib\\mysql-connector-java-8.0.24.jar
+file.reference.swingx-all-1.6.5-1.jar=lib/swingx-all-1.6.5-1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-0.27.jar}:\
-    ${file.reference.mysql-connector-java-8.0.24.jar}
+    ${file.reference.mysql-connector-java-8.0.24.jar}:\
+    ${file.reference.swingx-all-1.6.5-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
